--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roast My GitHub | Get Absolutely Roasted</title>
+    <link rel="icon" href="/github-white.svg" media="(prefers-color-scheme: dark)">
+    <link rel="icon" href="/github-black.svg" media="(prefers-color-scheme: light)">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
